--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     h1 { font-size: 35px; text-align: center; }
     .precio { font-size: 40px; font-weight: bold; margin-top: 12px; text-align: center; }
     .chico { font-size: 18px; color: #555; text-align: center; }
-    .lema { font-size: 18px; color: #455; text-align: center; font-weight: bold; font-style: italic; }
+    .lema { font-size: 18px; color: #455; font-weight: bold; font-style: italic; text-align: center;  }
   </style>
 </head>
 <body>
@@ -54,14 +54,12 @@ fetch(CSV_URL)
       minimumFractionDigits: 2,
       maximumFractionDigits: 2
           })}</div>
-      <div> </div>
       <div class="chico">Precio sujeto a modificaciones. Vigente al momento de la consulta.</div>
       <div class="chico">Precio sin impuestos nacionales: $ ${Number(prod[i.s]).toLocaleString("es-AR", {
       minimumFractionDigits: 2,
       maximumFractionDigits: 2
           })}</div>
       <div class="chico>Stock: ${prod[i.st]}</div>
-      <div> </div>
       <div class="lema">Mansa Ferre – Valoramos el trabajo bien hecho</div>
     `;
   });
