--- a/404.html
+++ b/404.html
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body { font-family: system-ui, sans-serif; margin: 25px; text-align: center; }
-    h1 { font-size: 35px; text-align: center; }
-    .precio { font-size: 40px; font-weight: bold; margin-top: 12px; text-align: center; }
-    .chico { font-size: 18px; color: #555; text-align: center; }
-    .lema { font-size: 18px; color: #455; text-align: center; font-weight: bold; font-style: italic; }
+    h1 { font-size: 50px; text-align: center; }
+    .precio { font-size: 70px; font-weight: bold; margin-top: 12px; text-align: center; }
+    .chico { font-size: 15px; color: #555; text-align: center; }
+    .lema { font-size: 25px; color: #455; font-weight: bold; font-style: italic; text-align: center;  }
+    .space { margin-top: 20px; }
   </style>
 </head>
 <body>
@@ -54,14 +55,14 @@ fetch(CSV_URL)
       minimumFractionDigits: 2,
       maximumFractionDigits: 2
           })}</div>
-      <div> </div>
+      <div class="space"></div>
       <div class="chico">Precio sujeto a modificaciones. Vigente al momento de la consulta.</div>
       <div class="chico">Precio sin impuestos nacionales: $ ${Number(prod[i.s]).toLocaleString("es-AR", {
       minimumFractionDigits: 2,
       maximumFractionDigits: 2
           })}</div>
-      <div class="chico>Stock: ${prod[i.st]}</div>
-      <div> </div>
+      <div class="chico">ST-${prod[i.st]}</div>
+      <div class="space"></div>
       <div class="lema">Mansa Ferre – Valoramos el trabajo bien hecho</div>
     `;
   });
